# sample-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json
lib/test/: CMakeLists.txt  test.cpp  test.h
lib/test/include/: test.h
lib/test/src/: test.cpp
tests/: CMakeLists.txt  tests.cpp
